Fix the gift window close button always being slightly off screen

--- a/src/modules/taller-windows/styles.css
+++ b/src/modules/taller-windows/styles.css
@@ -37,7 +37,7 @@
 #overlayPopup .giftSelectorView-scroller {
   height: auto;
   min-height: 300px;
-  max-height: 75vh;
+  max-height: 65vh;
 }
 
 #overlayPopup.giftSelectorViewPopup {
